<resources>
    <string name="app_name">BKBlueCheck</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="calendar">Thời khóa biểu</string>
    <string name="attendance">Điểm danh</string>
    <string name="student_class">Lớp sinh viên</string>
    <string name="search">Tìm kiếm</string>
    <string name="request">Xin nghỉ học</string>
    <string name="day_off">Duyệt yêu cầu</string>
    <string name="type">Loại hình:</string>
    <string name="title_activity_student_main">StudentMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_teacher_main">TeacherMainActivity</string>
</resources>