<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.project3.Activity.Fragment.home.StudentHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_student_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.project3.Activity.Fragment.SearchFragment.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.project3.Activity.Fragment.profile.StudentProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_student_profile" />
</navigation>